# postgres-mcp

./: .pre-commit-config.yaml  Cargo.toml  README.md  cliff.toml  deny.toml
.github/workflows/: build.yml
agents/: README.md  pg_agent.py  pyproject.toml  sse_client.py
docs/: notes.md
examples/: basic_agent.rs  mcp_client.rs
fixtures/: todo.sql
fixtures/migrations/: 20250330183340_init.sql
memory_bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  tasks.md  techContext.md
specs/: mcp-agent.md  mcp-client.md  mcp-tester.md  postgres-mcp-v0.2.md  postgres-mcp-v0.3.md  postgres-mcp-v1.md
src/: lib.rs  main.rs  mcp.rs  pg.rs
tests/: mcp_test.rs
