[package]
name = "postgres-mcp"
version = "0.2.1"
edition = "2024"
description = "A PostgreSQL MCP (Model Context Protocol) server implementation for building AI agents"
license = "MIT"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
documentation = "https://docs.rs/postgres-mcp"
repository = "https://github.com/tyrchen/postgres-mcp"
homepage = "https://github.com/tyrchen/postgres-mcp"
readme = "README.md"
categories = ["development-tools"]
keywords = ["postgres", "database", "mcp", "agent"]

[dependencies]
anyhow = "1.0"
arc-swap = "1.7"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "runtime-tokio-rustls",
  "postgres",
] }
rmcp = { version = "0.1", features = [
  "server",
  "transport-sse-server",
  "transport-io",
] }
schemars = "0.8"
sqlparser = "0.55"
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.16", features = ["v4"] }

[dev-dependencies]
rmcp = { version = "0.1", features = ["client", "transport-child-process"] }
sqlx-db-tester = "0.6"
